Provide storage endpoint to check calls
