# src/api/requests.js
@@ -1,0 +1,7 @@
+const { getStorage } = require('src/utils/storage')
+
+const requests = (req, res) => {
+  res.json(getStorage())
+}
+
+module.exports = requests
