# src/api/v1/indices/replaceObject.js
@@ -1,10 +1,12 @@
 const logger = require('src/utils/logger')
 const { makeTaskID, makeObjectID } = require('src/utils/ids')
+const { addToStorage } = require('src/utils/storage')
 
 /*
 
 */
 const replaceObject = (req, res) => {
+  addToStorage('replaceObject', req.body)
   logger.debug('replaceObject')
   logger.debug('url', req.originalUrl)
   logger.debug('params', req.params)
