# src/api/v1/indices/updateObject.js
@@ -1,10 +1,12 @@
 const logger = require('src/utils/logger')
 const { makeTaskID, makeObjectID } = require('src/utils/ids')
+const { addToStorage } = require('src/utils/storage')
 
 /*
 
 */
 const updateObject = (req, res) => {
+  addToStorage('updateObject', req.body)
   logger.debug('updateObject')
   logger.debug('url', req.originalUrl)
   logger.debug('params', req.params)
